# TTO-AGENT

./: ARCHITECTURE_DIAGRAM.drawio  mcp_registry.py  mcp_sessions.py  report.py  requirements.txt  server.py  server_proxy.py  settings.py  templates.py  tools.py  tto-strands-multi-agent-architecture-swimlane.drawio  tto-strands-multi-agent-architecture.drawio  tto_validator.py  workflow_tasks.py
docs/: README.md  cloud-ops-agent-plan.md
mcp_server_aws/: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  accounts.example.json  pyproject.toml
mcp_server_aws/mcp_server_aws/: __init__.py  config.py  credentials.py  middleware.py  server.py  upstream.py
src/checklist_agent/: README.md  __init__.py  a2a_client.py  mcp_sessions.py  pyproject.toml  server.py  settings.py  templates.py  tools.py
ui/: README.md  package-lock.json  package.json
ui/src/app/: copilotkit-theme.css  layout.tsx  page.tsx
ui/src/app/api/copilotkit/: route.ts
ui/src/src/app/: globals.css  layout.tsx
ui/src/src/app/api/copilotkit/: route.ts
