[project]
name = "mcp-server-aws-wrapper"
version = "0.1.0"
description = "FastMCP wrapper for AWS MCP with per-call account routing via STS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0",
  "botocore>=1.35.0",
  "fastmcp>=2.13.0",
  "mcp>=1.11.0,<2",
  "mcp-proxy-for-aws>=1.4.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[project.scripts]
mcp-server-aws = "mcp_server_aws.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
