[project]
name = "checklist-agent"
version = "0.3.0"
description = "A2A-exposed TTO checklist validator built on Strands Agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.11.0,<2",
  "pydantic-settings>=2.0",
  "strands-agents[a2a]>=1.18.0",
  "strands-agents-tools>=0.2.19",
]

[project.scripts]
checklist-agent = "checklist_agent.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
